# simstring_rs

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  README.md  cliff.toml  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  config.yml  documentation.md
.github/workflows/: CI.yml  coverage.yml
benches/: bench.jl  bench.py  bench.rb  bench.rs  bench_cpp.sh  bench_rust.py  bench_simstring_cpp.py  bench_simstring_python.py  compare_benches.py  run_benches.py
benches/data/: eng_google_books_unigram.txt
examples/: basic.rs  basic_usage.rs  python_basic.py
src/: lib.rs  search.rs
src/database/: file_loader.rs  hashdb.rs  mod.rs
src/extractors/: character_ngrams.rs  mod.rs  word_ngrams.rs
src/measures/: cosine.rs  dice.rs  exact_match.rs  jaccard.rs  mod.rs  overlap.rs
src/python/: mod.rs
tests/: test_cli.rs  test_database.rs  test_features.rs  test_file_loading.rs  test_measures.rs  test_python_integration.rs  test_search.rs
tests/data/: test.txt
tests/python/: test_bindings.py  test_errors.py  test_measures.py
