[package]
name = "simstring_rust"
version = "0.3.1-beta.3"
description = "A native Rust implementation of the SimString algorithm"
license = "MIT"
repository = "https://github.com/PyDataBlog/simstring_rs"
documentation = "https://docs.rs/simstringrust"
edition = "2021"
authors = ["Bernard Brenyah <bbrenyah@gmail.com>"]
keywords = ["string-matching", "nlp", "simstring", "cpmerge"]
categories = ["text-processing"]
homepage = "https://github.com/PyDataBlog/simstring_rs"
readme = "README.md"

[lib]
name = "simstring_rust"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rayon = "1.10"
ahash = "0.8"
lasso = "0.7"
thiserror = "2"
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py37"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.25"

[dev-dependencies]
num_cpus = "1.17"

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true

[package.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
push = false
publish = false
pre-release-commit-message = "chore(release): {{version}}"
