[package]
name = "simstring_rust"
version = "0.3.5-beta.1"
description = "A native Rust implementation of the SimString algorithm"
license = "MIT"
repository = "https://github.com/PyDataBlog/simstring_rs"
documentation = "https://docs.rs/simstringrust"
edition = "2021"
authors = ["Bernard Brenyah <bbrenyah@gmail.com>"]
keywords = ["string-matching", "nlp", "simstring", "cpmerge"]
categories = ["text-processing"]
homepage = "https://github.com/PyDataBlog/simstring_rs"
readme = "README.md"

[lib]
name = "simstring_rust"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ahash = "0.8"
rayon = "1.11"
thiserror = "2.0"
lasso = "0.7"
rustc-hash = "2.1"
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py37"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
pyo3-build-config = "0.28"

[dev-dependencies]
num_cpus = "1.17"

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true

[package.metadata.release]
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
push = false
publish = false
pre-release-commit-message = "chore(release): {{version}}"
