[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "simstring-rust"
requires-python = ">=3.10"
dynamic = ["version"]
description = "A fast, native Rust implementation of the SimString algorithm with Python bindings."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Bernard Brenyah", email = "bbrenyah@gmail.com" }
]
keywords = ["string-matching", "nlp", "simstring", "fuzzy"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows"
]

[project.urls]
Homepage = "https://github.com/PyDataBlog/simstring_rs"
Repository = "https://github.com/PyDataBlog/simstring_rs"
